--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,38 @@
 ---
-interface Props {
-	title: string;
-	body: string;
-	href: string;
-}
+// interface Props {
+//   title: string;
+//   body: string;
+//   image: string;
+//   starFilled: number;
+//   starEmpty: number;
+// }
 
-const { href, title, body } = Astro.props;
+const { image, title, body, starFilled, starEmpty, class: className } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<div class=`${className} bg-white p-8 rounded-xl shadow-lg `>
+  <div class="flex items-center gap-x-4">
+    <img class="w-24" src={image} alt="" />
+    <ul class="flex justify-center items-center">
+      {
+        Array.from({ length: starFilled }).map((_, index) => (
+          <li class="inline-block">
+            <img class="size-6" src="Star_fill.svg" alt="" />
+          </li>
+        ))
+      }
+      {
+        Array.from({ length: starEmpty }).map((_, index) => (
+          <li class="inline-block">
+            <img class="size-6" src="Star_fill_gray.svg" alt="" />
+          </li>
+        ))
+      }
+    </ul>
+  </div>
+  <h1 class="text-base font-bold mt-4 mb-2">{title}</h1>
+  <p class="text-[#52525A] leading-8 text-balance text-base font-medium">
+    {body}
+  </p>
+</div>
+<style></style>
